recallable/tests/ui/model_fail_manual_serde_rename.stderr
error: `#[recallable_model]` manages serde attributes automatically; use `#[recallable(rename = "...")]` instead of `#[serde(rename = "...")]`
 --> tests/ui/model_fail_manual_serde_rename.rs:6:5
  |
6 | /     #[serde(rename = "x")]
7 | |     value: i32,
  | |______________^
